<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginText"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="7dp" />

        <EditText
            android:id="@+id/editText_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/textView_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="131dp" />

        <EditText
            android:id="@+id/editText_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:hint="@string/EnterPassword"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/loginButton_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginButton"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>