<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/strut_relative"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/text_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="30sp"
        android:text="@string/hello_message" />

    <Button
        android:id="@+id/button_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_relative"
        android:layout_alignRight="@+id/strut_relative"
        android:layout_alignParentLeft="true"
        android:text="@string/ButtonText" />


    <ImageButton
        android:id="@+id/imageButton_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_relative"
        android:layout_alignLeft="@+id/strut_relative"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/flag" />

    <CheckBox
        android:id="@+id/checkBox_relative"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/strut_relative"
        android:layout_below="@id/button_relative"
        android:layout_alignTop="@id/switch_relative"
        android:layout_above="@id/edit_text_relative"
        android:text="@string/Check_box" />

    <Switch
        android:id="@+id/switch_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton_relative"
        android:layout_alignLeft="@+id/strut_relative"
        android:layout_alignParentRight="true"
        android:text="@string/Switch" />

    <EditText
        android:id="@+id/edit_text_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch_relative"
        android:hint="@string/EditText"
        android:inputType="textPersonName"/>


</RelativeLayout>
